# WatchMyBirds

./: .dockerignore  .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  SECURITY.md  batch_classification.py  config.py  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  go2rtc.yaml.example  logging_config.py  main.py  pyproject.toml  requirements-aesthetic.txt  requirements-companion.txt  requirements.txt  version.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
analytics/: README.md  index.html  package-lock.json  package.json  vite.config.js
assets/: common_names_DE.json  common_names_NO.json  custom.css  custom_script.js  design-system.css  extended_species_global.json  palette-tester.js
camera/: __init__.py  base_camera.py  detector.py  frame_generator.py  network_scanner.py  onvif_discovery.py  ptz_client.py  video_capture.py  webcam_camera.py
core/: __init__.py  analysis_queue.py  analytics_core.py  backup_restore_core.py  biodiversity.py  db_core.py  detections_core.py  event_intelligence.py  event_metadata.py  events.py  gallery_core.py  health_core.py  ingest_core.py  metadata_export_core.py  model_downloader_core.py  onvif_core.py  path_core.py  ptz_core.py  ptz_empirical_probe.py  ptz_grid.py  ptz_tracking_core.py  retention_core.py  review_cleanup_core.py  settings_core.py  species_colours.py  species_names_core.py  usb_backup_core.py  user_groundtruth_core.py
detectors/: classifier.py  cls_config.py  detection_manager.py  detector.py  motion_detector.py  od_classes.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  EXTENDED_SPECIES_CATALOG_POLICY.md  IMPACT_LEDGER-example.md  IMPACT_LEDGER.md  INVARIANTS.md  PRIVACY.md  TESTED_CAMERAS.md  UI_STANDARD.md  USB_BACKUP.md
rpi/: README.md  backup.sh  enable-persistent-logs.sh  format_backup_stick.sh  harden-dev.sh  harden.sh  install-python312.sh  update.sh
scripts/: AESTHETIC_TAG_DEPLOY.md  aesthetic_tag_nightly.py  analyze_decision_state_distribution.py  backfill_sharpness.py  benchmark_detector_variants.py  build_golden_image.sh  changelog_section.sh  cleanup_releases.sh  cleanup_uncertain_non_bird.py  diagnose_ptz_step_asymmetry.py  download_golden_artifact.sh  eval_decision_matrix.py  generate_extended_species.py  generate_icons_from_dataset.py  generate_model_metadata.py  generate_species_icon.py  generate_species_icon_vector.py  generate_species_photos_ai.py  install_git_hooks.sh  requirements_ai_photos.txt  security_sink_guard_prepush.sh  seed_test_data.py  test_aesthetic_tag_nightly.py  update_version.sh  version_info.sh
systemd/: app-dev.service  app.service
templates/: _ptz_empirical_probe_modal.html  analytics.html  analytics_pure.html  backup.html  base.html  edit.html  gallery.html  inbox.html  login.html  logs.html  orphans.html  privacy.html  restore.html  review_grid.html  settings.html  setup_password.html  species.html  species_overview.html  stream.html  subgallery.html  tbwd_habitat.html  tbwd_presentation.html  tbwd_vision.html  training_export.html  trash.html  unclear.html  user_groundtruth_export.html  user_groundtruth_export_dry_run.html
tests/: retention_helpers.py  test_achievement_card.py  test_aesthetic_integration.py  test_aesthetic_tag_scheduler.py  test_aesthetic_tagger_cpu_friendliness.py  test_aesthetic_tagger_lease_integration.py  test_analysis_queue.py  test_analysis_service.py  test_analysis_service_decision_integration.py  test_analytics_blueprint.py  test_analytics_template.py  test_api_v1.py  test_api_v1_models_classifier_pin.py  test_api_v1_models_detector.py  test_api_v1_nightly_jobs.py  test_api_v1_security_helpers.py  test_architecture_soft_monitoring.py  test_auth_blueprint.py  test_auth_service.py  test_bbox_quality_service.py  test_biodiversity.py  test_bird_visits.py  test_build_bird_events_call_counts.py  test_cache_invalidation_integration.py  test_cache_service.py  test_cameras_blueprint.py  test_capability_registry.py  test_changelog_section.py  test_classifier_metadata_thresholds.py  test_classifier_temperature.py  test_cls_config_backcompat.py  test_cls_config_non_bird.py  test_cls_config_per_genus.py  test_cls_config_two_stage.py  test_companion_api.py  test_companion_backend.py  test_companion_factory.py  test_companion_llama_cpp_adapter.py  test_companion_yaml_content_refresh.py  test_compute_lease_service.py  (+140 more)
utils/: achievement_card.py  backup.py  camera_storage.py  cpu_limiter.py  daily_report.py  db.py  deploy_info.py  file_gc.py  go2rtc_config.py  image_ops.py  image_text.py  ingest.py  (+13 more)
(+203 files in other folders)
